# storage/api-docs/api-docs.json
@@ -1282,6 +1282,59 @@
                 ]
             }
         },
+        "/api/v1/event/users": {
+            "get": {
+                "tags": [
+                    "Events"
+                ],
+                "summary": "List all users who have created events",
+                "description": "Display all users and their associated created events",
+                "operationId": "92eb335bce95120be149c77e64e4db5c",
+                "responses": {
+                    "200": {
+                        "description": "List users with their created events"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/event/user/{id}": {
+            "get": {
+                "tags": [
+                    "Events"
+                ],
+                "summary": "Get a specific User  with their events",
+                "description": "Display specific user and their associated created events",
+                "operationId": "251e57b00e5e76069111d104dc0f00b9",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User with events details"
+                    },
+                    "404": {
+                        "description": "User not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
         "/api/v1/roles": {
             "get": {
                 "tags": [
